feat: getTicketDetails endpoint
