# src/routes/ticket.routes.ts
@@ -4,7 +4,12 @@ import { UserTokenDb } from '../models';
 import { redisClient } from '../helpers/redis.connector';
 import { JwtType } from '../interfaces/user.verification';
 import { config } from '../constants/settings';
-import { handleCreateTicket, handleEditTicketDetails } from '../controlllers/ticket.controller';
+import {
+  handleCreateTicket,
+  handleEditTicketDetails,
+  handleGetAllTickets,
+  handleGetTicketDetails
+} from '../controlllers/ticket.controller';
 
 
 const router = express.Router({strict:true})
@@ -19,6 +24,7 @@ const jwtHelper = new JwtHelper({
 
 router.post('/create-ticket',jwtHelper.requirePermission(JwtType.USER), handleCreateTicket)
 router.put('/edit-ticket/:ticketId',jwtHelper.requirePermission(JwtType.USER),handleEditTicketDetails)
-router.get('/getAll?page=&limit=&filter=',jwtHelper.requirePermission(JwtType.USER))
+router.get('/getAll?page=&limit=&filter=',jwtHelper.requirePermission(JwtType.USER),handleGetAllTickets)
+router.get(':ticketId',jwtHelper.requirePermission(JwtType.USER),handleGetTicketDetails)
 
 export default router
